Fix CompactTrack.tsx jumping around while loading

--- a/src/styles/CompactTrack.module.scss
+++ b/src/styles/CompactTrack.module.scss
@@ -9,23 +9,7 @@
 .container {
     flex: 1 1 calc((100% - 1.6rem) / 3);
     min-width: min(400px, 100%);
-    display: flex;
-    align-items: baseline;
-}
-
-.addButton {
-    height: auto;
-    flex-shrink: 0;
-    width: 40px !important;
-    padding: 0 !important;
-
-    svg {
-        height: 13px;
-        width: 13px;
-    }
-}
-
-.insideContainer {
+    margin: auto;
     flex-grow: 1;
     display: flex;
     align-items: center;
@@ -38,6 +22,18 @@
 
     &:hover {
         background: var(--nextui-colors-secondaryLightHover);
+    }
+}
+
+.addButton {
+    height: auto;
+    flex-shrink: 0;
+    width: 40px !important;
+    padding: 0 !important;
+
+    svg {
+        height: 13px;
+        width: 13px;
     }
 }
 
